<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DescriptionActivity">

        <TextView
            android:id="@+id/txt_app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="start"
            android:padding="32dp"
            android:text="@string/app_description"
            android:textAppearance="@style/AppTheme"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="32dp"
            android:text="@string/text_permissions"

            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_bluetooth"
            android:drawableLeft="@drawable/ic_bluetooth"
            android:drawablePadding="10sp"
            android:fontFamily="serif"
            android:padding="32dp"
            android:text="@string/text_permissions_1"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10sp"
            android:fontFamily="serif"

            android:padding="32dp"
            android:text="@string/text_permissions_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="32dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/btn_register"
            android:textSize="18sp"
            android:theme="@style/Widget.MaterialComponents.Button.TextButton"
            app:cornerRadius="8dp" />

    </LinearLayout>
</ScrollView>